<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    app:layoutDescription="@xml/aaa_scene">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="22dp"
        android:text="BMI Calculator" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="18dp"
        android:text="Height(m):" />

    <EditText
        android:id="@+id/inputheight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/inph_hint"
        android:inputType="textPersonName"
        android:layout_marginBottom="20dp"
        android:text="" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="Weight(kg):" />

    <EditText
        android:id="@+id/inputweight"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/inpw_hint"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/btn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="myclick"
        android:layout_marginBottom="20dp"
        android:text="@string/btn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="18dp"
        android:text="@string/textView5" />

    <TextView
        android:id="@+id/out1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text=""
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="18dp"
        android:text="@string/textView3" />

    <TextView
        android:id="@+id/out2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="25dp"
        android:text="" />

</LinearLayout>