<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/teama"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="Team"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/out"
        android:layout_width="169dp"
        android:layout_height="152dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text=""
        android:textSize="30dp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:text="@string/point3"
        android:layout_gravity="center"
        android:onClick="click"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:text="@string/point2"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:text="@string/point1"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnreset"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:text="Reset"
        android:layout_gravity="center"/>
</LinearLayout>