<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="16dp"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:id="@+id/teama"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/teama" />

            <TextView
                android:id="@+id/scorea"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="TextView" />

            <Button
                android:id="@+id/btna3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="clicka"
                android:text="@string/point3" />

            <Button
                android:id="@+id/btna2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="clicka"
                android:text="@string/point2" />

            <Button
                android:id="@+id/btna1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="clicka"
                android:text="@string/point1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/teamb"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/teamb" />

            <TextView
                android:id="@+id/scoreb"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="TextView" />

            <Button
                android:id="@+id/btnb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="clickb"
                android:text="@string/point3" />

            <Button
                android:id="@+id/btnb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="clickb"
                android:text="@string/point2" />

            <Button
                android:id="@+id/btnb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="clickb"
                android:text="@string/point1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:text="Reset"
        android:onClick="clicka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>